<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YLC</string>
    <string name="contador1_texto">8000</string>
    <string name="contador2_texto">8000</string>
    <string name="action_settings">Settings</string>
    <string name="action_undo">Undo</string>
    <string name="action_moneda">Coin</string>
    <string name="action_dado">Dice</string>
    <string name="action_reiniciar">Restart</string>
    <string name="action_log">Log</string>
    <string name="action_redo">Redo</string>
    <string name="boton_turno">T</string>
    <string name="boton_reiniciar">S</string>
    <string name="boton_simulacion">Simulate</string>
    <string name="boton_fin_simulacion">Cancel</string>
    <string name="boton_aplica_simulacion">Apply</string>
    <string name="boton_dado_texto">Dice</string>
    <string name="boton_moneda_texto">Coin</string>
    <string name="dialogo_titulo_fin_juego">The Winner is </string>
    <string name="dialogo_texto_fin_juego">Do you wish to start Duel No.</string>
    <string name="boton_positivo_fin_juego">Yes</string>
    <string name="boton_negativo_fin_juego">No</string>
    <string name="dialogo_texto_fin_partida_p1">THE WINNER OF THE MATCH IS</string>
    <string name="dialogo_texto_fin_partida_p2">!!! \n Do you wish to start a new Match?</string>
    <string name="dialogo_texto_reincio_duelo">Do you wish to restart the Duel?</string>
    <string name="dialogo_texto_reincio">What do you want to restart?</string>
    <string name="dialogo_titulo_reincio">Restart</string>
    <string name="boton_positivo_reinicio">Duel</string>
    <string name="boton_neutral_reinicio">Nothing</string>
    <string name="boton_negativo_reinicio">Match</string>
    <string name="texto_log_retirada">(S)</string>
    <string name="texto_numero_duelo_log">Duel</string>
    <string name="texto_no_hay_ganador_log">Duel hasn\'t ended</string>
    <string name="texto__ganador_log">Winner:</string>
    <string name="texto_nombre_jugador_defecto">Player</string>
    <string name="texto_boton_retirada">Sccop</string>
    <string name="texto_boton_empate">Draw</string>
    <string name="texto_mensaje_empate">Draw</string>
    <string name="texto_hint_nombre">Name...</string>
    <string name="dialogo_titulo_cambio_nombre">Change name of</string>
    <string name="boton_aceptar">OK</string>
    <string name="boton_cancelar">Cancel</string>

    <!-- Strings de ayuda-->
    <string name="titulo_ayuda_contenedor_numeros">Calculator</string>
    <string name="descripcion_ayuda_contenedor_numeros">Touch either side of the screen to show the player\'s calculator or edit the player\'s name</string>
    <string name="titulo_ayuda_temporizador">Timer</string>
    <string name="descripcion_ayuda_temporizador">Touch the timer to pause or Long press to restart</string>
    <string name="boton_ayuda">Got it!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_moneda">Toss Coin</string>
    <string name="title_activity_dado">Roll Dice</string>
    <string name="title_activity_log">Log</string>
</resources>
