<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:id="@+id/principio"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/contenedorJugador1"
            android:orientation="vertical"
            android:paddingRight="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/contenedorGanados1"
                android:visibility="gone"
                android:layout_above="@+id/contador1">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/ivJ1J1"
                    android:layout_alignLeft="@+id/contador1"
                    android:src="@drawable/circulo_gris" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/ivJ1J2"
                    android:src="@drawable/circulo_gris" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/ivJ1J3"
                    android:src="@drawable/circulo_gris" />
            </LinearLayout>
            <TextView android:text="@string/contador1_texto"
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:id="@+id/contador1"
                android:gravity="center"
                android:textIsSelectable="false"
                android:background="@drawable/gradient_100"
                android:textSize="50sp"
                android:layout_alignBottom="@+id/contador2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:id="@+id/contenedorJugador2">
            <LinearLayout
                android:id="@+id/contenedorGanados2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:visibility="gone"
                android:layout_gravity="right"
                >
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/ivJ2J1"
                    android:src="@drawable/circulo_gris" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/ivJ2J2"
                    android:src="@drawable/circulo_gris" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/ivJ2J3"
                    android:src="@drawable/circulo_gris" />
            </LinearLayout>
            <TextView
                android:text="@string/contador2_texto"
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:id="@+id/contador2"
                android:textIsSelectable="false"
                android:gravity="center"
                android:layout_gravity="right"
                android:background="@drawable/gradient_100"
                android:textSize="50sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:text="@string/boton_fin_simulacion"
        android:id="@+id/btnFinSimulacion"
        android:textSize="12sp"
        android:visibility="gone"
        android:layout_alignTop="@+id/btnSimulacion"
        android:layout_alignLeft="@+id/btnSimulacion" />
    <Button
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:textSize="12sp"
        android:text="@string/boton_aplica_simulacion"
        android:id="@+id/btnAplicaSimulacion"
        android:visibility="gone"
        android:layout_alignTop="@+id/btnFinSimulacion"
        android:layout_alignRight="@+id/btnSimulacion"
        android:layout_alignEnd="@+id/btnSimulacion" />
    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/boton_simulacion"
        android:id="@+id/btnSimulacion"
        android:visibility="gone"
        android:textSize="12sp"
        android:layout_above="@+id/contenedorAcciones"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/temporizador"
        android:background="@color/rojo"
        android:text="45:00"
        android:layout_above="@id/contenedorAcciones"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/contenedorAcciones">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="T:1"
            android:textSize="10sp"
            android:id="@+id/turno"
            android:layout_alignParentBottom="true" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/contenedorNumeros"
        android:visibility="gone"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/espaciadoIzquierdo"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/background_material_dark"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="+"
                    android:id="@+id/suma1"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:text="-"
                    android:id="@+id/resta1"
                    android:layout_below="@+id/suma1"
                    android:layout_alignParentLeft="true" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:id="@+id/tvValorOperado"
                    android:layout_centerHorizontal="true"
                    android:background="@color/primary_material_light"
                    android:gravity="right"
                    android:textSize="25dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp">
                <Button
                    android:layout_width="0dp"
                    android:background="@drawable/round_button"
                    android:layout_margin="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="1"
                    android:id="@+id/btnUno" />

                <Button
                    android:layout_width="0dp"
                    android:background="@drawable/round_button"
                    android:layout_margin="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="2"
                    android:id="@+id/btnDos" />

                <Button
                    android:layout_width="0dp"
                    android:background="@drawable/round_button"
                    android:layout_margin="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="3"
                    android:id="@+id/btnTres"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="0dp"
                    android:background="@drawable/round_button"
                    android:layout_margin="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="4"
                    android:id="@+id/btnCuatro" />

                <Button
                    android:layout_width="0dp"
                    android:background="@drawable/round_button"
                    android:layout_margin="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="5"
                    android:id="@+id/btnCinco"/>

                <Button
                    android:layout_width="0dp"
                    android:background="@drawable/round_button"
                    android:layout_margin="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="6"
                    android:id="@+id/btnSeis" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="0dp"
                    android:background="@drawable/round_button"
                    android:layout_margin="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="7"
                    android:id="@+id/btnSiete"/>
                <Button
                    android:layout_width="0dp"
                    android:background="@drawable/round_button"
                    android:layout_margin="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="8"
                    android:id="@+id/btnOcho"/>

                <Button
                    android:layout_width="0dp"
                    android:background="@drawable/round_button"
                    android:layout_margin="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="9"
                    android:id="@+id/btnNueve" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="0dp"
                    android:background="@drawable/round_button"
                    android:layout_margin="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="0"
                    android:id="@+id/btnCero" />

                <Button
                    android:layout_width="0dp"
                    android:background="@drawable/round_button"
                    android:layout_margin="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="00"
                    android:id="@+id/btnDobleCero"/>

                <Button
                    android:layout_width="0dp"
                    android:background="@drawable/round_button"
                    android:layout_margin="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="000"
                    android:id="@+id/btnTripleCero" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="C"
                    android:id="@+id/btnBorrar"
                    android:layout_below="@+id/contenedorNumeros"
                    android:layout_alignLeft="@+id/contenedorNumeros"
                    android:layout_alignStart="@+id/contenedorNumeros" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/espaciadoDerecho"
            android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>
